# agent-workspace

./: .gitignore  AGENTS.md  PR_RECOMMENDATIONS.md  README.md  index.html  package-lock.json  package.json  server.js  thoughts.md  todo.js  workspace.code-workspace
.github/agents/: README.md  functional-generator.agent.md  heartbeat-maintainer.agent.md  orchestrator.agent.md  planning-agent.agent.md  (+1 more)
.ralph/: iterative-visual-loop-analyze.md  iterative-visual-loop-analyze.state.json
agents/: add_docs.py  docs_agent.py
extensions.local/: coder-policy.ts  coder.md  heartbeat-agent.ts  heartbeat.md  output-parsers.js  signal-adapters.js
iterative-visual-loop/: .env.example  .plan.md  PLAN.md  README-production-deploy.md  README.md  constants.ts  index.tsx  package.json  tsconfig.json  types.ts  vitest.config.ts
mtglib/: CONTRACT.md  PLAN.md  README.md
nn_example/: README.md  sketch.js  style.css
pocket_tui/: requirements.txt
pocket_tui/pocketharness/: LIFESTYLE.md  README.md  RETROSPECTIVE.md  __init__.py  __main__.py  flow.py  harness.py  harness_llm.py  llm_integration.py  pyproject.toml  shared_store.py
pocket_tui/pocketharness/nodes/: base.py  context.py  decision.py  execution.py  reflection.py
pocket_tui/pocketharness/skills/: __init__.py  action.py  base.py  error_handling.py  inspect.py  llm.py  llm_integration.py
pocket_tui/pocketharness/tasks/: demo_task.py
pocket_tui/pocketharness/tests/: test_nodes.py  test_skills.py
pocket_tui/pocketharness/tui/: cli.py
web-ui/: index.html  open.html  thoughts-app.js  thoughts-display.js
(+98 files in other folders)
